单线程同步log日志系统

--- a/MyTinyWebServer/MyTinyWebServer.vcxproj
+++ b/MyTinyWebServer/MyTinyWebServer.vcxproj
@@ -59,6 +59,8 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
     <UseDebugLibraries>true</UseDebugLibraries>
+    <RemoteCopyIncludeDirectories>/usr/include;$(RemoteCopyIncludeDirectories)</RemoteCopyIncludeDirectories>
+    <UseCompiler>true</UseCompiler>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <UseDebugLibraries>false</UseDebugLibraries>
@@ -75,10 +77,18 @@
   <ImportGroup Label="PropertySheets" />
   <PropertyGroup Label="UserMacros" />
   <ItemGroup>
+    <ClInclude Include="src\Config.h" />
+    <ClInclude Include="src\Log.h" />
+    <ClInclude Include="src\Client.h" />
+    <ClInclude Include="src\Server.h" />
     <ClInclude Include="src\HttpConnect.h" />
     <ClInclude Include="src\EventLoop.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\Config.cpp" />
+    <ClCompile Include="src\Log.cpp" />
+    <ClCompile Include="src\Client.cpp" />
+    <ClCompile Include="src\Server.cpp" />
     <ClCompile Include="src\HttpConnect.cpp" />
     <ClCompile Include="src\EventLoop.cpp" />
   </ItemGroup>
